[WIP][UPDATE] link metamask
